[package]
name = "test-kernel"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["runner"]
resolver = "2"

[dependencies]
bootloader_api = { git = "https://github.com/rust-osdev/bootloader", branch = "next" }
uart_16550 = "0.2.10"

[dependencies.noto-sans-mono-bitmap]
version = "0.1.2"
default-features = false
features = ["regular", "size_14"]
