[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
bootloader = "=0.11.0-alpha"
ovmf-prebuilt = "0.1.0-alpha.1"
test-kernel = { path = "..", artifact = "bin", target = "x86_64-unknown-none" }

[build-dependencies]
bootloader = "=0.11.0-alpha"
test-kernel = { path = "..", artifact = "bin", target = "x86_64-unknown-none" }
