[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
bootloader = { git = "https://github.com/rust-osdev/bootloader", branch = "next" }
ovmf-prebuilt = "0.1.0-alpha.1"
